--- a/contacto.html
+++ b/contacto.html
@@ -43,7 +43,7 @@
     <div class="row">
     <div class="col-sm-4">
     <div class="embed-responsive embed-responsive-16by9">
-    <img src="img/7.jpg" width="400" height="200" alt="">
+    <img src="img/8.jpeg" width="400" height="200" alt="">
                </div>
                <a href="https://www.youtube.com/watch?v=BqGufV8aXhY" target="_blank" title="ver PDF">ver más...</a>
      </div>
